animation flicker on flip card fix: set intial animation state

--- a/src/app/cards/flipcard/flipcard.component.scss
+++ b/src/app/cards/flipcard/flipcard.component.scss
@@ -10,7 +10,7 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  transition: transform 0.6s;
+  // transition: transform 500ms;
   transform-style: preserve-3d;
   // box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
